[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
solana-client = "1.18.1"
serde = { version = "1.0.152", features = ["derive"] }
solana-transaction-status = "1.18.1"
solana-sdk = "1.18.1"
bs58 = "0.5.0"
anchor-lang = "0.29.0"
